Add welcome page

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,5 +1,5 @@
 <main class="welcome">
-  <img class="avatar" src="../../assets/dog.jpg" alt="Dog" />
-
-  <h1>Woof 🐶!</h1>
+  <img src="../../assets/monkey.svg" alt="" />
+  <h1><span class="color-primary">Meal</span>Monkey</h1>
+  <p>Food Delivery</p>
 </main>
